syntax = "proto3";
package gkg;

import "gdelt_date.proto";
import "gdelt_source_collection_identifier.proto";
import "gdelt_count.proto";
import "gdelt_categorylist.proto";
import "gdelt_location.proto";
import "gdelt_tone.proto";
import "gdelt_quotation.proto";

message GlobalKnowledgeGraph {
    // The record ID.
    optional string record_id = 1;

    // The GDELT date.
    optional gdelt_date.GDELTDate v2_1_date = 2;

    // The source collection identifier.
    optional gdelt_source_collection_identifier.SourceCollectionIdentifier source_collection_identifier = 3;

    // The source common name.
    optional string source_common_name = 4;

    // The document identifier.
    optional string document_identifier = 5;

    // The counts.
    repeated gdelt_count.GDELTCount counts_v1 = 6;
    repeated gdelt_count.GDELTCount counts_v2 = 7;

    message ThemeWithOffset {
        gdelt_categorylist.GDELTCategoryList theme = 1;
        optional uint64 offset = 2;
    }

    // The themes.
    repeated gdelt_categorylist.GDELTCategoryList themes_v1 = 8;
    repeated ThemeWithOffset themes_v2 = 9;

    // The locations.
    repeated gdelt_location.GDELTLocation locations_v1 = 10;
    repeated gdelt_location.GDELTLocation locations_v2 = 11;


    message PersonWithOffset {
        string person = 1;
        uint64 offset = 2;
    }

    // The persons.
    repeated string persons_v1 = 12;
    repeated PersonWithOffset persons_v2 = 13;

    message OrganisationWithOffset {
        string organisation = 1;
        uint64 offset = 2;
    }

    // The organisations.
    repeated string organisations_v1 = 14;
    repeated OrganisationWithOffset organisations_v2 = 15;

    // The tone.
    optional gdelt_tone.GDELTTone tone = 16;

    // The enhanced dates.
    repeated gdelt_date.GDELTDate enhanced_dates = 17;

    // The sharing image.
    optional string sharing_image = 18;

    // The related images.
    repeated string related_images = 19;

    // The social image embeds.
    repeated string social_image_embeds = 20;

    // The social video embeds.
    repeated string social_video_embeds = 21;

    // The quotations.
    repeated gdelt_quotation.GDELTQuotation quotations = 22;

    message NameWithOffset {
        string name = 1;
        uint64 offset = 2;
    }

    // The all names.
    repeated NameWithOffset all_names = 23;

    message Amount {
        int64 value = 1;
        string currency = 2;
        uint64 count = 3;
    }

    // The amounts.
    repeated Amount amounts = 24;

    message TranslationInfo {
        string language = 1;
        string translation = 2;
    }

    // The translation info.
    optional TranslationInfo translation_info = 25;
}
